--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+aiofiles==23.2.1
+anyio==4.3.0
 blinker==1.7.0
 certifi==2024.2.2
 charset-normalizer==3.3.2
@@ -6,10 +8,12 @@ click==8.1.7
 configobj==5.0.8
 configparser==7.0.0
 etelemetry==0.3.1
+exceptiongroup==1.2.1
 filelock==3.13.4
-fitz==0.0.1.dev2
 Flask==3.0.3
 Flask-WTF==1.2.1
+frontend==0.0.3
+h11==0.14.0
 httplib2==0.22.0
 idna==3.7
 isodate==0.6.1
@@ -38,8 +42,12 @@ requests==2.31.0
 scipy==1.13.0
 simplejson==3.19.2
 six==1.16.0
+sniffio==1.3.1
+starlette==0.37.2
 traits==6.3.2
+typing_extensions==4.11.0
 tzdata==2024.1
 urllib3==2.2.1
+uvicorn==0.29.0
 Werkzeug==3.0.2
 WTForms==3.1.2
