--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
 aiofiles==23.2.1
+altair==5.3.0
 anyio==4.3.0
+attrs==23.2.0
 blinker==1.7.0
+cachetools==5.3.3
 certifi==2024.2.2
 charset-normalizer==3.3.2
 ci-info==0.3.0
@@ -13,6 +16,8 @@ filelock==3.13.4
 Flask==3.0.3
 Flask-WTF==1.2.1
 frontend==0.0.3
+gitdb==4.0.11
+GitPython==3.1.43
 h11==0.14.0
 httplib2==0.22.0
 idna==3.7
@@ -20,9 +25,13 @@ isodate==0.6.1
 itsdangerous==2.2.0
 Jinja2==3.1.3
 jsonify==0.5
+jsonschema==4.22.0
+jsonschema-specifications==2023.12.1
 looseversion==1.3.0
 lxml==5.2.1
+markdown-it-py==3.0.0
 MarkupSafe==2.1.5
+mdurl==0.1.2
 networkx==3.3
 nibabel==5.2.1
 nipype==1.8.6
@@ -30,8 +39,13 @@ numpy==1.26.4
 packaging==24.0
 pandas==2.2.2
 pathlib==1.0.1
+pillow==10.3.0
+protobuf==4.25.3
 prov==2.0.0
+pyarrow==16.0.0
+pydeck==0.9.0
 pydot==2.0.0
+Pygments==2.18.0
 PyMuPDF==1.24.2
 PyMuPDFb==1.24.1
 pyparsing==3.1.2
@@ -39,12 +53,21 @@ python-dateutil==2.9.0.post0
 pytz==2024.1
 pyxnat==1.6.2
 rdflib==7.0.0
+referencing==0.35.1
 requests==2.31.0
+rich==13.7.1
+rpds-py==0.18.1
 scipy==1.13.0
 simplejson==3.19.2
 six==1.16.0
+smmap==5.0.1
 sniffio==1.3.1
 starlette==0.37.2
+streamlit==1.34.0
+tenacity==8.2.3
+toml==0.10.2
+toolz==0.12.1
+tornado==6.4
 traits==6.3.2
 typing_extensions==4.11.0
 tzdata==2024.1
