--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 aiofiles==23.2.1
 altair==5.3.0
+annotated-types==0.6.0
 anyio==4.3.0
 attrs==23.2.0
 blinker==1.7.0
@@ -10,32 +11,51 @@ ci-info==0.3.0
 click==8.1.7
 configobj==5.0.8
 configparser==7.0.0
+contourpy==1.2.1
+cycler==0.12.1
+dnspython==2.6.1
+email_validator==2.1.1
 etelemetry==0.3.1
 exceptiongroup==1.2.1
+fastapi==0.111.0
+fastapi-cli==0.0.3
+ffmpy==0.3.2
 filelock==3.13.4
 Flask==3.0.3
 Flask-WTF==1.2.1
+fonttools==4.51.0
 frontend==0.0.3
+fsspec==2024.3.1
 gitdb==4.0.11
 GitPython==3.1.43
+gradio==4.29.0
+gradio_client==0.16.1
 h11==0.14.0
+httpcore==1.0.5
 httplib2==0.22.0
+httptools==0.6.1
+httpx==0.27.0
+huggingface-hub==0.23.0
 idna==3.7
+importlib_resources==6.4.0
 isodate==0.6.1
 itsdangerous==2.2.0
 Jinja2==3.1.3
 jsonify==0.5
 jsonschema==4.22.0
 jsonschema-specifications==2023.12.1
+kiwisolver==1.4.5
 looseversion==1.3.0
 lxml==5.2.1
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
+matplotlib==3.8.4
 mdurl==0.1.2
 networkx==3.3
 nibabel==5.2.1
 nipype==1.8.6
 numpy==1.26.4
+orjson==3.10.3
 packaging==24.0
 pandas==2.2.2
 pathlib==1.0.1
@@ -43,21 +63,30 @@ pillow==10.3.0
 protobuf==4.25.3
 prov==2.0.0
 pyarrow==16.0.0
+pydantic==2.7.1
+pydantic_core==2.18.2
 pydeck==0.9.0
 pydot==2.0.0
+pydub==0.25.1
 Pygments==2.18.0
 PyMuPDF==1.24.2
 PyMuPDFb==1.24.1
 pyparsing==3.1.2
 python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+python-multipart==0.0.9
 pytz==2024.1
 pyxnat==1.6.2
+PyYAML==6.0.1
 rdflib==7.0.0
 referencing==0.35.1
 requests==2.31.0
 rich==13.7.1
 rpds-py==0.18.1
+ruff==0.4.3
 scipy==1.13.0
+semantic-version==2.10.0
+shellingham==1.5.4
 simplejson==3.19.2
 six==1.16.0
 smmap==5.0.1
@@ -66,12 +95,19 @@ starlette==0.37.2
 streamlit==1.34.0
 tenacity==8.2.3
 toml==0.10.2
+tomlkit==0.12.0
 toolz==0.12.1
 tornado==6.4
+tqdm==4.66.4
 traits==6.3.2
+typer==0.12.3
 typing_extensions==4.11.0
 tzdata==2024.1
+ujson==5.9.0
 urllib3==2.2.1
 uvicorn==0.29.0
+uvloop==0.19.0
+watchfiles==0.21.0
+websockets==11.0.3
 Werkzeug==3.0.2
 WTForms==3.1.2
