--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,12 @@
+absl-py==2.1.0
 aiofiles==23.2.1
+aiohttp==3.9.5
+aiosignal==1.3.1
 altair==5.3.0
 annotated-types==0.6.0
 anyio==4.3.0
+astunparse==1.6.3
+async-timeout==4.0.3
 attrs==23.2.0
 blinker==1.7.0
 cachetools==5.3.3
@@ -13,6 +18,8 @@ configobj==5.0.8
 configparser==7.0.0
 contourpy==1.2.1
 cycler==0.12.1
+dataclasses-json==0.6.6
+distro==1.9.0
 dnspython==2.6.1
 email_validator==2.1.1
 etelemetry==0.3.1
@@ -23,14 +30,21 @@ ffmpy==0.3.2
 filelock==3.13.4
 Flask==3.0.3
 Flask-WTF==1.2.1
+flatbuffers==24.3.25
 fonttools==4.51.0
 frontend==0.0.3
+frozenlist==1.4.1
 fsspec==2024.3.1
+gast==0.5.4
 gitdb==4.0.11
 GitPython==3.1.43
+google-pasta==0.2.0
 gradio==4.29.0
 gradio_client==0.16.1
+gradio_pdf==0.0.7
+grpcio==1.63.0
 h11==0.14.0
+h5py==3.11.0
 httpcore==1.0.5
 httplib2==0.22.0
 httptools==0.6.1
@@ -42,23 +56,42 @@ isodate==0.6.1
 itsdangerous==2.2.0
 Jinja2==3.1.3
 jsonify==0.5
+jsonpatch==1.33
+jsonpointer==2.4
 jsonschema==4.22.0
 jsonschema-specifications==2023.12.1
+keras==3.3.3
 kiwisolver==1.4.5
+langchain==0.1.19
+langchain-community==0.0.38
+langchain-core==0.1.52
+langchain-text-splitters==0.0.1
+langsmith==0.1.56
+libclang==18.1.1
 looseversion==1.3.0
 lxml==5.2.1
+Markdown==3.6
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
+marshmallow==3.21.2
 matplotlib==3.8.4
 mdurl==0.1.2
+ml-dtypes==0.3.2
+multidict==6.0.5
+mypy-extensions==1.0.0
+namex==0.0.8
 networkx==3.3
 nibabel==5.2.1
 nipype==1.8.6
 numpy==1.26.4
+openai==1.28.0
+opt-einsum==3.3.0
+optree==0.11.0
 orjson==3.10.3
-packaging==24.0
+packaging==23.2
 pandas==2.2.2
 pathlib==1.0.1
+pdf2image==1.17.0
 pillow==10.3.0
 protobuf==4.25.3
 prov==2.0.0
@@ -72,6 +105,8 @@ Pygments==2.18.0
 PyMuPDF==1.24.2
 PyMuPDFb==1.24.1
 pyparsing==3.1.2
+pypdf==4.2.0
+PyPDF2==3.0.1
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 python-multipart==0.0.9
@@ -80,10 +115,12 @@ pyxnat==1.6.2
 PyYAML==6.0.1
 rdflib==7.0.0
 referencing==0.35.1
+regex==2024.5.10
 requests==2.31.0
 rich==13.7.1
 rpds-py==0.18.1
 ruff==0.4.3
+safetensors==0.4.3
 scipy==1.13.0
 semantic-version==2.10.0
 shellingham==1.5.4
@@ -91,16 +128,27 @@ simplejson==3.19.2
 six==1.16.0
 smmap==5.0.1
 sniffio==1.3.1
+SQLAlchemy==2.0.30
 starlette==0.37.2
 streamlit==1.34.0
 tenacity==8.2.3
+tensorboard==2.16.2
+tensorboard-data-server==0.7.2
+tensorflow==2.16.1
+tensorflow-io-gcs-filesystem==0.37.0
+termcolor==2.4.0
+tf_keras==2.16.0
+tiktoken==0.6.0
+tokenizers==0.19.1
 toml==0.10.2
 tomlkit==0.12.0
 toolz==0.12.1
 tornado==6.4
 tqdm==4.66.4
 traits==6.3.2
+transformers==4.40.2
 typer==0.12.3
+typing-inspect==0.9.0
 typing_extensions==4.11.0
 tzdata==2024.1
 ujson==5.9.0
@@ -110,4 +158,6 @@ uvloop==0.19.0
 watchfiles==0.21.0
 websockets==11.0.3
 Werkzeug==3.0.2
+wrapt==1.16.0
 WTForms==3.1.2
+yarl==1.9.4
