--- a/requirements.txt
+++ b/requirements.txt
@@ -5,29 +5,40 @@ aiosignal==1.3.1
 altair==5.3.0
 annotated-types==0.6.0
 anyio==4.3.0
+appnope==0.1.4
+asttokens==2.4.1
 astunparse==1.6.3
 async-timeout==4.0.3
 attrs==23.2.0
+beautifulsoup4==4.12.3
 blinker==1.7.0
+bs4==0.0.2
 cachetools==5.3.3
 certifi==2024.2.2
 charset-normalizer==3.3.2
 ci-info==0.3.0
 click==8.1.7
+comm==0.2.2
 configobj==5.0.8
 configparser==7.0.0
 contourpy==1.2.1
 cycler==0.12.1
 dataclasses-json==0.6.6
+debugpy==1.8.1
+decorator==5.1.1
+diskcache==5.6.3
 distro==1.9.0
 dnspython==2.6.1
+docker==7.0.0
 email_validator==2.1.1
 etelemetry==0.3.1
 exceptiongroup==1.2.1
+executing==2.0.1
 fastapi==0.111.0
 fastapi-cli==0.0.3
 ffmpy==0.3.2
 filelock==3.13.4
+FLAML==2.1.2
 Flask==3.0.3
 Flask-WTF==1.2.1
 flatbuffers==24.3.25
@@ -52,14 +63,19 @@ httpx==0.27.0
 huggingface-hub==0.23.0
 idna==3.7
 importlib_resources==6.4.0
+ipykernel==6.29.4
+ipython==8.24.0
 isodate==0.6.1
 itsdangerous==2.2.0
+jedi==0.19.1
 Jinja2==3.1.3
 jsonify==0.5
 jsonpatch==1.33
 jsonpointer==2.4
 jsonschema==4.22.0
 jsonschema-specifications==2023.12.1
+jupyter_client==8.6.1
+jupyter_core==5.7.2
 keras==3.3.3
 kiwisolver==1.4.5
 langchain==0.1.19
@@ -75,11 +91,13 @@ markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 marshmallow==3.21.2
 matplotlib==3.8.4
+matplotlib-inline==0.1.7
 mdurl==0.1.2
 ml-dtypes==0.3.2
 multidict==6.0.5
 mypy-extensions==1.0.0
 namex==0.0.8
+nest-asyncio==1.6.0
 networkx==3.3
 nibabel==5.2.1
 nipype==1.8.6
@@ -88,14 +106,23 @@ openai==1.28.0
 opt-einsum==3.3.0
 optree==0.11.0
 orjson==3.10.3
+outcome==1.3.0.post0
 packaging==23.2
 pandas==2.2.2
+parso==0.8.4
 pathlib==1.0.1
 pdf2image==1.17.0
+pexpect==4.9.0
 pillow==10.3.0
+platformdirs==4.2.1
+prompt-toolkit==3.0.43
 protobuf==4.25.3
 prov==2.0.0
+psutil==5.9.8
+ptyprocess==0.7.0
+pure-eval==0.2.2
 pyarrow==16.0.0
+pyautogen==0.2.27
 pydantic==2.7.1
 pydantic_core==2.18.2
 pydeck==0.9.0
@@ -107,12 +134,14 @@ PyMuPDFb==1.24.1
 pyparsing==3.1.2
 pypdf==4.2.0
 PyPDF2==3.0.1
+PySocks==1.7.1
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 python-multipart==0.0.9
 pytz==2024.1
 pyxnat==1.6.2
 PyYAML==6.0.1
+pyzmq==26.0.3
 rdflib==7.0.0
 referencing==0.35.1
 regex==2024.5.10
@@ -128,7 +157,10 @@ simplejson==3.19.2
 six==1.16.0
 smmap==5.0.1
 sniffio==1.3.1
+sortedcontainers==2.4.0
+soupsieve==2.5
 SQLAlchemy==2.0.30
+stack-data==0.6.3
 starlette==0.37.2
 streamlit==1.34.0
 tenacity==8.2.3
@@ -145,8 +177,11 @@ tomlkit==0.12.0
 toolz==0.12.1
 tornado==6.4
 tqdm==4.66.4
+traitlets==5.14.3
 traits==6.3.2
 transformers==4.40.2
+trio==0.25.0
+trio-websocket==0.11.1
 typer==0.12.3
 typing-inspect==0.9.0
 typing_extensions==4.11.0
@@ -156,8 +191,10 @@ urllib3==2.2.1
 uvicorn==0.29.0
 uvloop==0.19.0
 watchfiles==0.21.0
+wcwidth==0.2.13
 websockets==11.0.3
 Werkzeug==3.0.2
 wrapt==1.16.0
+wsproto==1.2.0
 WTForms==3.1.2
 yarl==1.9.4
