--- a/requirements.txt
+++ b/requirements.txt
@@ -1,200 +1,110 @@
-absl-py==2.1.0
 aiofiles==23.2.1
 aiohttp==3.9.5
 aiosignal==1.3.1
 altair==5.3.0
-annotated-types==0.6.0
-anyio==4.3.0
-appnope==0.1.4
-asttokens==2.4.1
-astunparse==1.6.3
-async-timeout==4.0.3
+annotated-types==0.7.0
+anyio==4.4.0
 attrs==23.2.0
-beautifulsoup4==4.12.3
-blinker==1.7.0
-bs4==0.0.2
-cachetools==5.3.3
-certifi==2024.2.2
+certifi==2024.6.2
 charset-normalizer==3.3.2
-ci-info==0.3.0
 click==8.1.7
-comm==0.2.2
-configobj==5.0.8
-configparser==7.0.0
 contourpy==1.2.1
 cycler==0.12.1
-dataclasses-json==0.6.6
-debugpy==1.8.1
-decorator==5.1.1
-diskcache==5.6.3
+dataclasses-json==0.6.7
 distro==1.9.0
 dnspython==2.6.1
-docker==7.0.0
-email_validator==2.1.1
-etelemetry==0.3.1
-exceptiongroup==1.2.1
-executing==2.0.1
+email_validator==2.2.0
+faiss-cpu==1.8.0
 fastapi==0.111.0
-fastapi-cli==0.0.3
+fastapi-cli==0.0.4
 ffmpy==0.3.2
-filelock==3.13.4
-FLAML==2.1.2
-Flask==3.0.3
-Flask-WTF==1.2.1
-flatbuffers==24.3.25
-fonttools==4.51.0
-frontend==0.0.3
+filelock==3.15.3
+fonttools==4.53.0
 frozenlist==1.4.1
-fsspec==2024.3.1
-gast==0.5.4
-gitdb==4.0.11
-GitPython==3.1.43
-google-pasta==0.2.0
-gradio==4.29.0
-gradio_client==0.16.1
-gradio_pdf==0.0.7
-grpcio==1.63.0
+fsspec==2024.6.0
+gradio==4.36.1
+gradio_client==1.0.1
 h11==0.14.0
-h5py==3.11.0
 httpcore==1.0.5
-httplib2==0.22.0
 httptools==0.6.1
 httpx==0.27.0
-huggingface-hub==0.23.0
+huggingface-hub==0.23.4
 idna==3.7
 importlib_resources==6.4.0
-ipykernel==6.29.4
-ipython==8.24.0
-isodate==0.6.1
-itsdangerous==2.2.0
-jedi==0.19.1
-Jinja2==3.1.3
-jsonify==0.5
+Jinja2==3.1.4
+joblib==1.4.2
 jsonpatch==1.33
-jsonpointer==2.4
+jsonpointer==3.0.0
 jsonschema==4.22.0
 jsonschema-specifications==2023.12.1
-jupyter_client==8.6.1
-jupyter_core==5.7.2
-keras==3.3.3
 kiwisolver==1.4.5
-langchain==0.1.19
-langchain-community==0.0.38
-langchain-core==0.1.52
-langchain-text-splitters==0.0.1
-langsmith==0.1.56
-libclang==18.1.1
-looseversion==1.3.0
-lxml==5.2.1
-Markdown==3.6
+langchain==0.2.5
+langchain-community==0.2.5
+langchain-core==0.2.9
+langchain-huggingface==0.0.3
+langchain-openai==0.1.8
+langchain-text-splitters==0.2.1
+langsmith==0.1.81
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
-marshmallow==3.21.2
-matplotlib==3.8.4
-matplotlib-inline==0.1.7
+marshmallow==3.21.3
+matplotlib==3.9.0
 mdurl==0.1.2
-ml-dtypes==0.3.2
+mpmath==1.3.0
 multidict==6.0.5
 mypy-extensions==1.0.0
-namex==0.0.8
-nest-asyncio==1.6.0
 networkx==3.3
-nibabel==5.2.1
-nipype==1.8.6
 numpy==1.26.4
-openai==1.28.0
-opt-einsum==3.3.0
-optree==0.11.0
-orjson==3.10.3
-outcome==1.3.0.post0
-packaging==23.2
+openai==1.35.3
+orjson==3.10.5
+packaging==24.1
 pandas==2.2.2
-parso==0.8.4
-pathlib==1.0.1
-pdf2image==1.17.0
-pexpect==4.9.0
 pillow==10.3.0
-platformdirs==4.2.1
-prompt-toolkit==3.0.43
-protobuf==4.25.3
-prov==2.0.0
-psutil==5.9.8
-ptyprocess==0.7.0
-pure-eval==0.2.2
-pyarrow==16.0.0
-pyautogen==0.2.27
-pydantic==2.7.1
-pydantic_core==2.18.2
-pydeck==0.9.0
-pydot==2.0.0
+pydantic==2.7.4
+pydantic_core==2.18.4
 pydub==0.25.1
 Pygments==2.18.0
-PyMuPDF==1.24.2
-PyMuPDFb==1.24.1
 pyparsing==3.1.2
-pypdf==4.2.0
 PyPDF2==3.0.1
-PySocks==1.7.1
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 python-multipart==0.0.9
 pytz==2024.1
-pyxnat==1.6.2
 PyYAML==6.0.1
-pyzmq==26.0.3
-rdflib==7.0.0
 referencing==0.35.1
-regex==2024.5.10
-requests==2.31.0
+regex==2024.5.15
+requests==2.32.3
 rich==13.7.1
 rpds-py==0.18.1
-ruff==0.4.3
+ruff==0.4.10
 safetensors==0.4.3
-scipy==1.13.0
+scikit-learn==1.5.0
+scipy==1.13.1
 semantic-version==2.10.0
+sentence-transformers==3.0.1
 shellingham==1.5.4
-simplejson==3.19.2
 six==1.16.0
-smmap==5.0.1
 sniffio==1.3.1
-sortedcontainers==2.4.0
-soupsieve==2.5
-SQLAlchemy==2.0.30
-stack-data==0.6.3
+SQLAlchemy==2.0.31
 starlette==0.37.2
-streamlit==1.34.0
-tenacity==8.2.3
-tensorboard==2.16.2
-tensorboard-data-server==0.7.2
-tensorflow==2.16.1
-tensorflow-io-gcs-filesystem==0.37.0
-termcolor==2.4.0
-tf_keras==2.16.0
-tiktoken==0.6.0
+sympy==1.12.1
+tenacity==8.4.1
+threadpoolctl==3.5.0
+tiktoken==0.7.0
 tokenizers==0.19.1
-toml==0.10.2
 tomlkit==0.12.0
 toolz==0.12.1
-tornado==6.4
+torch==2.3.1
 tqdm==4.66.4
-traitlets==5.14.3
-traits==6.3.2
-transformers==4.40.2
-trio==0.25.0
-trio-websocket==0.11.1
+transformers==4.41.2
 typer==0.12.3
 typing-inspect==0.9.0
-typing_extensions==4.11.0
+typing_extensions==4.12.2
 tzdata==2024.1
-ujson==5.9.0
-urllib3==2.2.1
-uvicorn==0.29.0
+ujson==5.10.0
+urllib3==2.2.2
+uvicorn==0.30.1
 uvloop==0.19.0
-watchfiles==0.21.0
-wcwidth==0.2.13
+watchfiles==0.22.0
 websockets==11.0.3
-Werkzeug==3.0.2
-wrapt==1.16.0
-wsproto==1.2.0
-WTForms==3.1.2
 yarl==1.9.4
