--- a/requirements.txt
+++ b/requirements.txt
@@ -14,16 +14,16 @@ dataclasses-json==0.6.7
 distro==1.9.0
 dnspython==2.6.1
 email_validator==2.2.0
-faiss-cpu==1.8.0
+faiss-cpu==1.8.0.post1
 fastapi==0.111.0
 fastapi-cli==0.0.4
 ffmpy==0.3.2
-filelock==3.15.3
+filelock==3.15.4
 fonttools==4.53.0
 frozenlist==1.4.1
-fsspec==2024.6.0
-gradio==4.36.1
-gradio_client==1.0.1
+fsspec==2024.6.1
+gradio==4.37.2
+gradio_client==1.0.2
 h11==0.14.0
 httpcore==1.0.5
 httptools==0.6.1
@@ -38,13 +38,13 @@ jsonpointer==3.0.0
 jsonschema==4.22.0
 jsonschema-specifications==2023.12.1
 kiwisolver==1.4.5
-langchain==0.2.5
-langchain-community==0.2.5
-langchain-core==0.2.9
+langchain==0.2.6
+langchain-community==0.2.6
+langchain-core==0.2.10
 langchain-huggingface==0.0.3
-langchain-openai==0.1.8
-langchain-text-splitters==0.2.1
-langsmith==0.1.81
+langchain-openai==0.1.13
+langchain-text-splitters==0.2.2
+langsmith==0.1.82
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 marshmallow==3.21.3
@@ -55,11 +55,12 @@ multidict==6.0.5
 mypy-extensions==1.0.0
 networkx==3.3
 numpy==1.26.4
-openai==1.35.3
+openai==1.35.7
 orjson==3.10.5
 packaging==24.1
 pandas==2.2.2
 pillow==10.3.0
+pycryptodome==3.20.0
 pydantic==2.7.4
 pydantic_core==2.18.4
 pydub==0.25.1
@@ -76,10 +77,10 @@ regex==2024.5.15
 requests==2.32.3
 rich==13.7.1
 rpds-py==0.18.1
-ruff==0.4.10
+ruff==0.5.0
 safetensors==0.4.3
 scikit-learn==1.5.0
-scipy==1.13.1
+scipy==1.14.0
 semantic-version==2.10.0
 sentence-transformers==3.0.1
 shellingham==1.5.4
@@ -88,7 +89,7 @@ sniffio==1.3.1
 SQLAlchemy==2.0.31
 starlette==0.37.2
 sympy==1.12.1
-tenacity==8.4.1
+tenacity==8.4.2
 threadpoolctl==3.5.0
 tiktoken==0.7.0
 tokenizers==0.19.1
@@ -96,7 +97,7 @@ tomlkit==0.12.0
 toolz==0.12.1
 torch==2.3.1
 tqdm==4.66.4
-transformers==4.41.2
+transformers==4.42.3
 typer==0.12.3
 typing-inspect==0.9.0
 typing_extensions==4.12.2
